Add a renderer for the blood inside the blood grinder